# llm_mm_experiment

./: README.md
mkl/: CMakeLists.txt  batch.sh
mkl/src/: mkl_gemm.c
openblas/: CMakeLists.txt  batch.sh
openblas/src/: openblas_gemm.c
tvm/: batch.sh  batch_old.sh  matmul_gencode.py  matmul_timer.py
tvm_avx512/: batch.sh  gettime.c  gflops.py  matmul_gencode.py
tvm_znver4/: gflops.py  matmul_gencode.py  matmul_timer.py
